recruitment/css/styles.css
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Merriweather, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
  background-color: #1C1B26 !important;
  width: 100vw;
}
textarea, input, button {
  font-family: Merriweather, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
}

a:link {
  text-decoration: none;
}

a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

a:active {
  text-decoration: none;
}

#name {
  color: orange;
}

#link {
  color: rgb(250, 217, 156);
}

.video-wrapper {
  margin-left: 25%;
  width: 50%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.video {
  width: 100%;
  max-height: 100vh;
}


#btnSubmit {
  color: black;
  border-color: orange;
  background-color: orange;
  width: 40%;
}

.paper-wrapper-class {
  display: block;
  padding: 2vw 10vw;
  opacity: 0;
  position: fixed;
  top: 0px;
  height: 0px;
}

.fade-in-transition {
  transition: opacity 2s ease-out;
  -webkit-transition: opacity 2s ease-out;  
  -moz-transition: opacity 2s ease-in-out;
  opacity: 1;
  position: initial;
  height: auto;
}

#paper-header {
  width: 100%;

  background: url("../res/first-section-paper.png");
  background-repeat: repeat-y;
  min-height: 22rem;
  background-size: 100%;
}

#paper-header-background {
  width: 100%;
}

#paper-footer-section {
  width: 99.5%;
}

#header-content-img {
  height: 100%;
}

.header-content {
  padding: 1rem 2rem;

  color: white;
}

.header-container {
  display: flex;
  flex-direction: column;

  @media only screen and (min-width: 600px) {
    flex-direction: row;
  }

}

.title {
  text-align: center;
  margin-bottom: 1rem;;
}

.t1 {
  font-size: 1rem;
}

.t2 {
  color: orange;
  font-size: 1.5rem;
}


#paper-middle {
  position: relative;
  width: 100%;

  background-image: url("../res/bg-section.png");
  background-repeat: repeat-y;
  min-height: 112rem;
  background-size: contain;
}


#paper-middle-background {
  width: 100%;
}

.middle-content {
  padding: 1rem 3rem;
}

.cell {
  background-color: rgb(232, 213, 178, 0.7); 
  display: flex; 
  flex-direction: column;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  padding: 1rem 1.25rem;
}

.styled-input {
  font-size: inherit;
  margin: 0.5rem 0rem 0.75rem;
  padding: 0.25rem 0.5rem;
  background-color: inherit;
  height: 5rem;
}

.styled-input:focus {
  outline: none;
}

.styled-outer-input {
  font-size: inherit;
  margin: 0.5rem 0rem 0.75rem;
  background-color: rgb(232, 213, 178, 0.7);
  padding: 0.25rem 0.5rem;
  border: 1px solid gray;
}

.styled-outer-input:focus {
  outline: none;
}

.footer {
  padding: 1.2rem;
}

.styled-submit-btn {
  width: 100%;
  padding: 0.5rem;
  background-color: orange;
  font-weight: bold;
  border: 1px solid gray;
  font-size: 1.25rem;
}

.styled-submit-btn:hover {
  cursor: pointer;
  background-color: darkorange;
}

.subtitle {
  font-size: 1.25rem;
  color: white;
  font-weight: bold;
  text-align: center;
  margin-top: 2rem;
  margin-bottom: 1rem;
  text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
}

.handwriting {
  font-family: 'Lumanosimo' !important;
}

.bold {
  font-weight: 900;
}

.p-margin {
  margin-bottom: 1rem;
}

.envelope-container {
  display: none;
  position: fixed;
  top: 0;
  height: 100%;
  width: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0.5);
}

.envelope-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: cornsilk;
  border: 1px solid lightgray;
  font-size: 1.5rem;
  font-weight: 700;
  padding: 1rem 2rem;
  color: black;
  border-radius: 0.2rem;
}

.envelopePic {
  height: 45vh;
}

.envelope-yes-btn {
  padding: 0.5rem 1rem;
  background-color: orange;
  font-weight: bold;
  border: 1px solid gray;
  border-radius: 0.5rem;
  font-size: 1.5rem;

}

.envelope-yes-btn:hover {
  cursor: pointer;
  background-color: darkorange;
}

.envelope-no-btn {
  padding: 0.5rem 1rem;
  background-color: crimson;
  font-weight: bold;
  border: 1px solid gray;
  border-radius: 0.5rem;
  font-size: 1.5rem;
}

.envelope-no-btn:hover {
  cursor: pointer;
  background-color: darkred;
}

.replay-gif {
  display: none;
  position: absolute;
  top: 0.5rem;
  left: 0.5rem;
  height: 4rem;
  cursor: pointer;
  z-index: 2;
}


/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  html {
    font-size: 10px !important;
  }

  .video-wrapper {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;  
  }
}
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
  html {
    font-size: 12px !important;
  }

  .video-wrapper {
    margin-left: 12.5%;
    width: 75%;
  }

  .logo-img {
      height: 40vw;  
  }

  .header-container {
    /* display: flex;
    flex-direction: column; */
  
    flex-direction: row;
  }
}
/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  html {
    font-size: 14px !important; 
  }

  .video-wrapper {
    margin-left: 25%;
    width: 50%;
  }
}
/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  html {
    font-size: 16px !important;
  }
}
/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
  html {
    font-size: 18px !important;
  }
}

/* Extra large devices (large laptops and desktops, 1500px and up) */
@media only screen and (min-width: 1500px) {
  html {
    font-size: 22px !important;
  }
}

/* Extra large devices (large laptops and desktops, 1900px and up) */
@media only screen and (min-width: 1900px) {
  html {
    font-size: 26px !important;
  }
}

